# identity

./: .env  Cargo.toml  Dockerfile  README.md  build.rs  implementation_plan.md  walkthrough.md
.github/workflows/: ci-sandbox.yml  pre-release-main.yml  release-main.yml
libs/: Cargo.toml  README.md
libs/application/: Cargo.toml
libs/application/src/: lib.rs
libs/common/: Cargo.toml
libs/common/src/: lib.rs
libs/concurrency/: Cargo.toml
libs/concurrency/src/: lib.rs
libs/configs/: Cargo.toml  README.md
libs/configs/src/: lib.rs
libs/copier/: Cargo.toml
libs/copier/src/: lib.rs
libs/crypto/: Cargo.toml
libs/crypto/src/: lib.rs
libs/docs/: go-port-inventory.md  go-to-rust-roadmap.md
libs/env/: Cargo.toml
libs/env/src/: lib.rs
libs/error/: Cargo.toml
libs/error/src/: lib.rs
libs/http/: Cargo.toml
libs/http/src/: lib.rs
libs/logging/: Cargo.toml
libs/logging/src/: lib.rs
libs/marshaler/: Cargo.toml
libs/marshaler/src/: lib.rs
libs/notify/: Cargo.toml
libs/notify/src/: lib.rs
libs/oauth2/: Cargo.toml
libs/oauth2/src/: lib.rs
libs/protobuf/common/: base.pb.go  base.proto  build.sh
libs/protobuf/google/api/: annotations.proto  http.proto
libs/queue/: Cargo.toml
libs/queue/src/: lib.rs
libs/random/: Cargo.toml
libs/random/src/: lib.rs
libs/ratelimit/: Cargo.toml
libs/ratelimit/src/: lib.rs
libs/socket/: Cargo.toml
libs/socket/src/: lib.rs
libs/ssh/: Cargo.toml
libs/ssh/src/: lib.rs
libs/storage/: Cargo.toml
libs/storage/src/: lib.rs  repo.rs
libs/table/: Cargo.toml
libs/table/src/: table.rs
libs/time/: Cargo.toml
libs/time/src/: lib.rs
libs/validator/: Cargo.toml
libs/validator/src/: lib.rs
migrations/: 20260128000001_initial_schema.sql  20260128000002_auth_hardening.sql  20260128000003_organization_invitations.sql  20260408000004_user_profile_fields.sql  20260422000005_google_oauth.sql
protobuf/: README.md
protobuf/common/base/: common.base.rs
protobuf/identity/: build.sh  identity.pb.go  identity.proto  identity_grpc.pb.go  service.identity.rs  service.identity.tonic.rs
protobuf/shared/organization/: build.sh  organization.pb.go  organization.proto  shared.organization.rs
protobuf/shared/user/: build.sh  shared.user.rs  user.pb.go  user.proto
src/: lib.rs  main.rs
src/config/: mod.rs
src/converters/: mod.rs
src/handler/: grpc.rs  metadata.rs  mod.rs  rest.rs
src/manager/: mod.rs
src/manager/biz/: admin.rs  auth.rs  authz.rs  mod.rs  organization.rs  password.rs  profile.rs  token.rs
src/manager/repository/: mod.rs
src/manager/validate/: mod.rs
tests/: identity_service_test.rs
