[package]
name = "identity"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.12"

[dependencies]
axum = "0.8.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "macros", "chrono", "uuid", "migrate"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
headers = "0.4"
jsonwebtoken = "9"
bcrypt = "0.15"
rand = "0.8"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
serial_test = "3"
