[package]
name = "oauth2"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true

[dev-dependencies]
tokio.workspace = true
httpmock = "0.7"
