[package]
name = "storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
sqlx.workspace = true
thiserror.workspace = true
url.workspace = true
rusty-s3.workspace = true
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
philand_configs = { package = "configs", path = "../configs" }
philand_table = { package = "table", path = "../table" }
